# biblio-baggins

./: README.md  pyproject.toml
biblio_baggins/: choosepapers.py  cli.py  commands.py  dblp.py  helpers.py  logger.py  notify.py  pdf.py  rofi.py
